# RCSParser

./: .gitignore  LICENSE  README.md  config-example.py  config.py  example.py  pyproject.toml  requirements.txt  sc_parser.py
RCSParser/: __init__.py  config-example.py  sc_parser.py
data/: cookies.json
