[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RCSParser"
version = "0.0.1"
authors = [
  { name="Makcxim"}
]
description = "Rockstar Social Club Parser"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/Makcxim/SocialClub-jobs-finder#readme"
Issues = "https://github.com/Makcxim/SocialClub-jobs-finder/issues"
Source = "github.com/Makcxim/SocialClub-jobs-finder"

[tool.hatch.version]
path = "RCSParser/__init__.py"